2007-10-25  Albert Chu  <chu11@llnl.gov>

	* man/Makefile.am: Install cerebro.1 manpage in man1 instead of
	man3.
	
2007-10-24  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c (main): Fix minor output corner
	case.
	
2007-10-23  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c, src/libs/util/config_util.c:
	Fix non-debug build compile bugs.

	* configure.ac: Revert lib version change, since interfacea
	actually didn't change.

	* src/cerebrod/, src/modules/, src/libs/modules/,
	src/include/cerebro/: Include module interface versioning.

	* man/cerebro_module_devel.3.in: Update with new versioning
	information.

	* META, NEWS: update for release

	* tagged cerebro-1-3-1

2007-10-22  Albert Chu  <chu11@llnl.gov>

	* man/cerebro_module.3.in: Add event module information.

	* man/cerebro.1: New manpage.

	* man/cerebro.3: Removed file.

	* man/Makefile.am: Update for new manpage.

	* src/libs/util/config_util.c (_cb_cerebrod_alternate_hostname):
	Fix corner case.

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c (_cb_cerebrod_forward_message_config):
	Accept longer strings for potential comma or hostrange inputs.

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod_listener.c:
	Support of 'cerebrod_forward_host_accept' config option.
	
2007-10-18  Albert Chu  <chu11@llnl.gov>

	* src/libs/modules/config_module_default.c: Removed file.

	* src/libs/modules/config_module.h,
	src/libs/modules/config_module.c (config_module_found): New
	function.

	* src/libs/util/config_util.c (_load_config_module): Do not load a
	config module if one is not found.

	* src/libs/modules/config_module.c (config_module_load): Do not
	use a default config module.

	* src/libs/modules/clusterlist_module_default.c: Removed file.

	* src/libs/modules/clusterlist_module.h,